[gd_scene load_steps=3 format=3 uid="uid://dialogbox001"]

[ext_resource type="Script" path="res://scripts/ui/dialog_box.gd" id="1_dialogbox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.96, 0.87, 0.7, 1)
corner_radius_left_top = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource("1_dialogbox")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_top = 40.0
offset_right = -30.0
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpeakerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96, 0.87, 0.7, 1)
theme_override_font_sizes/font_size = 28
text = "Speaker Name"

[node name="TextLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Dialog text goes here..."
autowrap_mode = 2

[node name="ContinueIndicator" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "â–¼ Tap to continue"
